results/SVCOMP/specgen/log-OverapproximationString01-2024_02_28_20_53_45.txt
public class OverapproximationString01 {
    //@ requires s != null;
    //@ ensures prefix.equals("abc");
    //@ ensures complete.equals("abc" + s);
    //@ ensures complete.equals("not possible") ==> \result == true;
    //@ ensures !complete.equals("not possible") ==> \result == false;
    public static void foo(String s) {
        String prefix = "abc";
        String complete = prefix + s;
        if (complete.equals("not possible")) {
            assert (true);
        } else {
            assert (false);
        }
    }
}
/home/max/Documents/JMLGPT/tmp/OverapproximationString01.java:3: error: cannot find symbol
    //@ ensures prefix.equals("abc");
                ^
  symbol:   variable prefix
  location: class OverapproximationString01
/home/max/Documents/JMLGPT/tmp/OverapproximationString01.java:4: error: cannot find symbol
    //@ ensures complete.equals("abc" + s);
                ^
  symbol:   variable complete
  location: class OverapproximationString01
/home/max/Documents/JMLGPT/tmp/OverapproximationString01.java:5: error: cannot find symbol
    //@ ensures complete.equals("not possible") ==> \result == true;
                ^
  symbol:   variable complete
  location: class OverapproximationString01
/home/max/Documents/JMLGPT/tmp/OverapproximationString01.java:5: error: A \result expression may not be used in the specification of a method that returns void
    //@ ensures complete.equals("not possible") ==> \result == true;
                                                     ^
/home/max/Documents/JMLGPT/tmp/OverapproximationString01.java:6: error: cannot find symbol
    //@ ensures !complete.equals("not possible") ==> \result == false;
                 ^
  symbol:   variable complete
  location: class OverapproximationString01
/home/max/Documents/JMLGPT/tmp/OverapproximationString01.java:6: error: A \result expression may not be used in the specification of a method that returns void
    //@ ensures !complete.equals("not possible") ==> \result == false;
                                                      ^
6 errors

public class OverapproximationString01 {
    //@ requires s != null;
    //@ ensures true;
    public static void foo(String s) {
        String prefix = "abc";
        String complete = prefix + s;
        if (complete.equals("not possible")) {
            assert (true);
        } else {
            assert (false);
        }
    }
}
